<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/user_preferences_title">

        <EditTextPreference
                android:key="username_preference"
                android:title="@string/title_username_preference"
                android:summary="@string/summary_username_preference"
                android:dialogTitle="@string/dialog_title_username_preference" />

        <ListPreference
                android:key="usertype_preference"
                android:title="@string/title_usertype_preference"
                android:summary="@string/summary_usertype_preference"
                android:entries="@array/entries_usertype_preference"
                android:entryValues="@array/entryvalues_usertype_preference"
                android:dialogTitle="@string/dialog_title_usertype_preference"
                android:defaultValue="@string/defaultvalue_usertype_preference" />

    </PreferenceCategory>
</PreferenceScreen>